--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ paging = "3.2.1"
 coroutines-core = "1.3.2"
 room = "2.6.1"
 annotation = "1.7.1"
+ui-android = "1.7.5"
 
 
 [libraries]
@@ -66,6 +67,7 @@ room-runtime = { group = "androidx.room", name = "room-ktx", version.ref = "room
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room"}
 room-paging = { group = "androidx.room", name = "room-paging", version.ref = "room"}
 annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
+androidx-ui-android = { group = "androidx.compose.ui", name = "ui-android", version.ref = "ui-android" }
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
