--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
-        <activity android:name=".login.LoginActivity"
+        <activity android:name="com.example.presentation.login.LoginActivity"
             android:exported="true"
             >
             <intent-filter>
